--- a/flynn-cli/Dockerfile
+++ b/flynn-cli/Dockerfile
@@ -8,4 +8,4 @@ RUN apk add --no-cache curl
 RUN curl -s -A "$(uname -sp)" -L https://dl.flynn.io/cli | zcat > $CLI && \
     chmod +x $CLI
 
-CMD ["flynn"]
+ENTRYPOINT ["flynn"]
